<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:text="Button"
        app:layout_constraintBaseline_toBaselineOf="@+id/toggleButton"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="43dp"
        android:background="@drawable/toggle_style"
        android:text="ToggleButton"
        android:textOff="@string/button_off"
        android:textOn="@string/button_on"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="10dp"
        android:text="Switch"
        app:layout_constraintBottom_toBottomOf="@+id/toggleButton"
        app:layout_constraintStart_toEndOf="@+id/toggleButton" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/ic_estrella"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/borderlessButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="3dp"
        android:text="Button"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <Button
        android:id="@+id/btnBotonMasImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:drawableLeft="@drawable/ic_estrella"
        android:drawablePadding="5dp"
        android:text="@string/click"
        app:layout_constraintBaseline_toBaselineOf="@+id/borderlessButton"
        app:layout_constraintStart_toEndOf="@+id/borderlessButton" />

    <LinearLayout
        android:id="@+id/barraBotones"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/borderlessButton">

        <Button
            android:id="@+id/btnAceptar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aceptar" />

        <Button
            android:id="@+id/btnCancelar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelar" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="18dp"
        android:text="RadioGroup"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barraBotones" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Checkbox"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/chkMarcame"
        app:layout_constraintStart_toStartOf="@+id/chkMarcame" />

    <RadioGroup
        android:id="@+id/grbGrupo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/rbOpcion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/op1" />

        <RadioButton
            android:id="@+id/rbOpcion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/op2" />
    </RadioGroup>


    <CheckBox
        android:id="@+id/chkMarcame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="37dp"
        android:checked="false"
        android:text="@string/marcar"
        app:layout_constraintStart_toEndOf="@+id/barraBotones"
        app:layout_constraintTop_toBottomOf="@+id/barraBotones" />

</androidx.constraintlayout.widget.ConstraintLayout>